--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,6 @@
        "      <th>8</th>\n",
        "      <th>9</th>\n",
        "      <th>...</th>\n",
-       "      <th>2294</th>\n",
        "      <th>2295</th>\n",
        "      <th>2296</th>\n",
        "      <th>2297</th>\n",
@@ -47,153 +46,154 @@
        "      <th>2301</th>\n",
        "      <th>2302</th>\n",
        "      <th>2303</th>\n",
+       "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>8259</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>15.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1974</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>34.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1950</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>38.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6529</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>149.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>114.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>65.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9769</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>181.0</td>\n",
+       "      <td>9573</td>\n",
+       "      <td>117.0</td>\n",
        "      <td>116.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>116</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8573</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10246</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2627</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 2304 columns</p>\n",
+       "<p>5 rows × 2305 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         0     1     2      3      4     5     6     7     8     9  ...  \\\n",
-       "8259  20.0  20.0  19.0   19.0   18.0  17.0  16.0  16.0  16.0  15.0  ...   \n",
-       "1974  34.0  32.0  32.0   31.0   28.0  27.0  27.0  28.0  30.0  33.0  ...   \n",
-       "1950  51.0  52.0  52.0   52.0   52.0  55.0  59.0  61.0  62.0  65.0  ...   \n",
-       "6529  46.0  50.0  84.0  129.0  149.0  92.0  46.0  42.0  38.0  35.0  ...   \n",
-       "9769  38.0  44.0  46.0   51.0   47.0  40.0  40.0  41.0  42.0  43.0  ...   \n",
+       "           0      1      2      3      4      5      6      7      8      9  \\\n",
+       "9573   117.0  116.0  136.0  138.0  139.0  141.0  137.0  123.0  121.0  113.0   \n",
+       "116     20.0   21.0   24.0   32.0   56.0   84.0  111.0  131.0  137.0  136.0   \n",
+       "8573    14.0   14.0   14.0   14.0   15.0   26.0   26.0   17.0   14.0   14.0   \n",
+       "10246   33.0   31.0   31.0   32.0   34.0   38.0   40.0   43.0   47.0   51.0   \n",
+       "2627    67.0   64.0   67.0   76.0   86.0   75.0   63.0   57.0   64.0   51.0   \n",
        "\n",
-       "       2294   2295   2296   2297   2298   2299  2300   2301   2302   2303  \n",
-       "8259   12.0   13.0   14.0   15.0   15.0   15.0  15.0   15.0   14.0   15.0  \n",
-       "1974   34.0   35.0   34.0   34.0   34.0   33.0  34.0   33.0   34.0   34.0  \n",
-       "1950   33.0   37.0   37.0   37.0   38.0   39.0  41.0   41.0   39.0   38.0  \n",
-       "6529  140.0  105.0  105.0  102.0  114.0  100.0  86.0   78.0   74.0   65.0  \n",
-       "9769   83.0   74.0   72.0   71.0   67.0   60.0  90.0  148.0  181.0  116.0  \n",
+       "       ...   2295   2296   2297  2298  2299  2300  2301  2302  2303  label  \n",
+       "9573   ...   50.0   50.0   58.0  61.0  66.0  70.0  74.0  81.0  79.0      6  \n",
+       "116    ...   19.0   19.0   20.0  20.0  19.0  19.0  19.0  19.0  20.0      0  \n",
+       "8573   ...  205.0  119.0  110.0  67.0  41.0  93.0  56.0  50.0  40.0      5  \n",
+       "10246  ...   28.0   26.0   26.0  27.0  28.0  28.0  29.0  31.0  30.0      7  \n",
+       "2627   ...   80.0   78.0   75.0  74.0  74.0  75.0  75.0  76.0  77.0      1  \n",
        "\n",
-       "[5 rows x 2304 columns]"
+       "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,9 +202,107 @@
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
+    "labels = pd.read_csv('data/y_train_smpl.csv')\n",
+    "\n",
+    "data['label'] = labels\n",
     "data = data.sample(frac=1)\n",
     "\n",
     "data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = data.iloc[:, :-1]\n",
+    "y = data['label']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33)\n",
+    "\n",
+    "del data\n",
+    "del X\n",
+    "del y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.27      0.14      0.18       463\n",
+      "           1       0.25      0.22      0.23       601\n",
+      "           2       0.09      0.83      0.16       134\n",
+      "           3       0.78      0.39      0.52       430\n",
+      "           4       0.77      0.20      0.32       709\n",
+      "           5       0.51      0.44      0.47       683\n",
+      "           6       0.39      0.60      0.47       274\n",
+      "           7       0.10      0.53      0.17        86\n",
+      "           8       0.69      0.11      0.20       710\n",
+      "           9       0.18      0.30      0.22        88\n",
+      "\n",
+      "    accuracy                           0.30      4178\n",
+      "   macro avg       0.40      0.38      0.29      4178\n",
+      "weighted avg       0.51      0.30      0.32      4178\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "gnb = GaussianNB()\n",
+    "\n",
+    "y_pred = gnb.fit(X_train, y_train).predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
+    "labels = pd.read_csv('data/y_train_smpl_0.csv')\n",
+    "\n",
+    "data['label'] = labels\n",
+    "data = data.sample(frac=1)\n",
+    "\n",
+    "print(data.corr())\n",
+    "\n",
+    "# data.head(5)\n",
+    "\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# X = data.iloc[:, :-1]\n",
+    "# y = data['label']\n",
+    "\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33)\n",
+    "\n",
+    "# del data\n",
+    "# del X\n",
+    "# del y\n",
+    "\n",
+    "# from sklearn.naive_bayes import GaussianNB\n",
+    "# from sklearn.metrics import confusion_matrix, classification_report\n",
+    "# gnb = GaussianNB()\n",
+    "\n",
+    "# y_pred = gnb.fit(X_train, y_train).predict(X_test)\n",
+    "\n",
+    "# print(classification_report(y_test, y_pred))"
    ]
   }
  ],
