Sorted label correlation.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -205,6 +205,7 @@
     "labels = pd.read_csv('data/y_train_smpl.csv')\n",
     "\n",
     "data['label'] = labels\n",
+    "\n",
     "data = data.sample(frac=1)\n",
     "\n",
     "data.head(5)"
@@ -230,33 +231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.27      0.14      0.18       463\n",
-      "           1       0.25      0.22      0.23       601\n",
-      "           2       0.09      0.83      0.16       134\n",
-      "           3       0.78      0.39      0.52       430\n",
-      "           4       0.77      0.20      0.32       709\n",
-      "           5       0.51      0.44      0.47       683\n",
-      "           6       0.39      0.60      0.47       274\n",
-      "           7       0.10      0.53      0.17        86\n",
-      "           8       0.69      0.11      0.20       710\n",
-      "           9       0.18      0.30      0.22        88\n",
-      "\n",
-      "    accuracy                           0.30      4178\n",
-      "   macro avg       0.40      0.38      0.29      4178\n",
-      "weighted avg       0.51      0.30      0.32      4178\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
@@ -269,56 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              0         1         2         3         4         5         6  \\\n",
-      "0      1.000000  0.981468  0.954511  0.929792  0.909988  0.893766  0.881036   \n",
-      "1      0.981468  1.000000  0.981160  0.951932  0.928304  0.908454  0.893912   \n",
-      "2      0.954511  0.981160  1.000000  0.980427  0.951892  0.929362  0.910234   \n",
-      "3      0.929792  0.951932  0.980427  1.000000  0.981069  0.954545  0.930721   \n",
-      "4      0.909988  0.928304  0.951892  0.981069  1.000000  0.981616  0.954315   \n",
-      "...         ...       ...       ...       ...       ...       ...       ...   \n",
-      "2300   0.440859  0.438725  0.438334  0.441506  0.440071  0.441430  0.442738   \n",
-      "2301   0.440131  0.437303  0.436552  0.439701  0.438949  0.440354  0.440922   \n",
-      "2302   0.439348  0.436397  0.435658  0.438698  0.437888  0.438899  0.439078   \n",
-      "2303   0.434383  0.432415  0.432540  0.432265  0.430896  0.433020  0.433255   \n",
-      "label -0.041803 -0.041223 -0.040658 -0.040132 -0.038294 -0.037030 -0.033264   \n",
-      "\n",
-      "              7         8         9  ...      2295      2296      2297  \\\n",
-      "0      0.870069  0.859920  0.848270  ...  0.427085  0.426732  0.425135   \n",
-      "1      0.878816  0.866126  0.853488  ...  0.424650  0.423935  0.423620   \n",
-      "2      0.893057  0.878689  0.864427  ...  0.424954  0.423916  0.422949   \n",
-      "3      0.911332  0.894369  0.877986  ...  0.426936  0.424830  0.423299   \n",
-      "4      0.931110  0.909950  0.891257  ...  0.428297  0.426254  0.423797   \n",
-      "...         ...       ...       ...  ...       ...       ...       ...   \n",
-      "2300   0.442608  0.444692  0.443616  ...  0.823901  0.856005  0.885581   \n",
-      "2301   0.440328  0.443121  0.442642  ...  0.798468  0.828862  0.854386   \n",
-      "2302   0.438549  0.440433  0.439829  ...  0.779830  0.808183  0.829269   \n",
-      "2303   0.431817  0.432983  0.432594  ...  0.760481  0.787188  0.805895   \n",
-      "label -0.029139 -0.026380 -0.023689  ...  0.084202  0.084198  0.080320   \n",
-      "\n",
-      "           2298      2299      2300      2301      2302      2303     label  \n",
-      "0      0.431002  0.439117  0.440859  0.440131  0.439348  0.434383 -0.041803  \n",
-      "1      0.429131  0.437132  0.438725  0.437303  0.436397  0.432415 -0.041223  \n",
-      "2      0.428472  0.436704  0.438334  0.436552  0.435658  0.432540 -0.040658  \n",
-      "3      0.429689  0.438791  0.441506  0.439701  0.438698  0.432265 -0.040132  \n",
-      "4      0.429282  0.437510  0.440071  0.438949  0.437888  0.430896 -0.038294  \n",
-      "...         ...       ...       ...       ...       ...       ...       ...  \n",
-      "2300   0.927253  0.973415  1.000000  0.974255  0.929712  0.894003  0.063798  \n",
-      "2301   0.889931  0.931378  0.974255  1.000000  0.969740  0.929975  0.064335  \n",
-      "2302   0.858612  0.893112  0.929712  0.969740  1.000000  0.974462  0.065523  \n",
-      "2303   0.831444  0.861317  0.894003  0.929975  0.974462  1.000000  0.066055  \n",
-      "label  0.072366  0.067927  0.063798  0.064335  0.065523  0.066055  1.000000  \n",
-      "\n",
-      "[2305 rows x 2305 columns]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -326,35 +260,15 @@
     "labels = pd.read_csv('data/y_train_smpl_0.csv')\n",
     "\n",
     "data['label'] = labels\n",
+    "\n",
     "data = data.sample(frac=1)\n",
     "\n",
     "corr = data.corr()\n",
-    "result = abs(corr['label']).sort_values(by=['label', ascending=False])[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6560     1\n",
-       "12396    1\n",
-       "6762     1\n",
-       "11222    1\n",
-       "2266     1\n",
-       "Name: label, dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['label'].head(5)"
+    "\n",
+    "corr_label = [(index, abs(corr_val)) for index, corr_val in enumerate(corr['label'])]\n",
+    "corr_label = sorted(corr_label, key=lambda tup: tup[1], reverse=True)  # Order by correlation value\n",
+    "\n",
+    "corr_label[:20]"
    ]
   }
  ],
