Added some comments

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -206,6 +206,7 @@
     "\n",
     "data['label'] = labels\n",
     "\n",
+    "# Point 1: Data Randomization\n",
     "data = data.sample(frac=1)\n",
     "\n",
     "data.head(5)"
@@ -237,6 +238,8 @@
    },
    "outputs": [],
    "source": [
+    "# Point 4: Classification with Naive Bayes\n",
+    "\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "gnb = GaussianNB()\n",
@@ -254,6 +257,8 @@
    },
    "outputs": [],
    "source": [
+    "# Point 5: Deeper analysis of the data\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
@@ -267,8 +272,9 @@
     "\n",
     "corr_label = [(index, abs(corr_val)) for index, corr_val in enumerate(corr['label'])]\n",
     "corr_label = sorted(corr_label, key=lambda tup: tup[1], reverse=True)  # Order by correlation value\n",
+    "corr_label.pop(0)\n",
     "\n",
-    "corr_label[:20]"
+    "corr_label[:10]"
    ]
   }
  ],
@@ -288,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
