--- a/From_1_to_4.ipynb
+++ b/From_1_to_4.ipynb
@@ -2,202 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2295</th>\n",
-       "      <th>2296</th>\n",
-       "      <th>2297</th>\n",
-       "      <th>2298</th>\n",
-       "      <th>2299</th>\n",
-       "      <th>2300</th>\n",
-       "      <th>2301</th>\n",
-       "      <th>2302</th>\n",
-       "      <th>2303</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4592</th>\n",
-       "      <td>35.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11918</th>\n",
-       "      <td>22.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1623</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>33.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 2305 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           0      1      2      3      4      5      6      7      8      9  \\\n",
-       "78     255.0  255.0  255.0  255.0  255.0  255.0  255.0  255.0  255.0  255.0   \n",
-       "4592    35.0   34.0   33.0   34.0   36.0   36.0   36.0   36.0   36.0   36.0   \n",
-       "11918   22.0   22.0   23.0   23.0   23.0   23.0   23.0   23.0   23.0   22.0   \n",
-       "1623    12.0   12.0   12.0   12.0   12.0   12.0   12.0   12.0   12.0   12.0   \n",
-       "181     33.0   31.0   33.0   35.0   34.0   32.0   31.0   33.0   33.0   32.0   \n",
-       "\n",
-       "       ...     2295   2296  2297  2298  2299  2300  2301  2302  2303  label  \n",
-       "78     ...    100.0  108.0  58.0  41.0  40.0  40.0  40.0  41.0  40.0      0  \n",
-       "4592   ...     38.0   36.0  35.0  51.0  65.0  63.0  58.0  44.0  37.0      3  \n",
-       "11918  ...     37.0   38.0  42.0  47.0  45.0  39.0  32.0  38.0  47.0      8  \n",
-       "1623   ...     13.0   13.0  13.0  14.0  13.0  12.0  11.0  11.0  11.0      1  \n",
-       "181    ...     28.0   29.0  33.0  32.0  27.0  28.0  27.0  25.0  27.0      0  \n",
-       "\n",
-       "[5 rows x 2305 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -206,15 +13,13 @@
     "\n",
     "data['label'] = labels\n",
     "\n",
-    "# Point 1: Data Randomization\n",
-    "data = data.sample(frac=1)\n",
-    "\n",
-    "data.head(5)"
+    "# The train_test_split already shuffles the data\n",
+    "# data = data.sample(frac=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,16 +28,13 @@
     "X = data.iloc[:, :-1]\n",
     "y = data['label']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33)\n",
-    "\n",
-    "del data\n",
-    "del X\n",
-    "del y"
+    "# Point 2: Data Randomization\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -241,20 +43,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.29      0.15      0.20       463\n",
-      "           1       0.26      0.22      0.24       614\n",
-      "           2       0.10      0.84      0.17       146\n",
-      "           3       0.77      0.39      0.52       451\n",
-      "           4       0.76      0.21      0.33       714\n",
-      "           5       0.46      0.45      0.46       700\n",
-      "           6       0.43      0.60      0.50       251\n",
-      "           7       0.09      0.57      0.16        75\n",
-      "           8       0.65      0.11      0.18       672\n",
-      "           9       0.18      0.25      0.21        92\n",
+      "           0       0.25      0.14      0.18       458\n",
+      "           1       0.26      0.23      0.25       641\n",
+      "           2       0.08      0.85      0.15       119\n",
+      "           3       0.77      0.38      0.51       425\n",
+      "           4       0.79      0.21      0.34       696\n",
+      "           5       0.51      0.45      0.48       737\n",
+      "           6       0.36      0.59      0.45       247\n",
+      "           7       0.10      0.59      0.17        75\n",
+      "           8       0.72      0.09      0.16       682\n",
+      "           9       0.19      0.26      0.22        98\n",
       "\n",
-      "   micro avg       0.30      0.30      0.30      4178\n",
-      "   macro avg       0.40      0.38      0.30      4178\n",
-      "weighted avg       0.50      0.30      0.32      4178\n",
+      "    accuracy                           0.30      4178\n",
+      "   macro avg       0.40      0.38      0.29      4178\n",
+      "weighted avg       0.51      0.30      0.32      4178\n",
       "\n"
      ]
     }
@@ -295,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
