--- a/From_05_to_07.ipynb
+++ b/From_05_to_07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,20 +97,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.21      0.37      0.27       462\n",
-      "           1       0.25      0.18      0.21       614\n",
-      "           2       0.12      0.90      0.21       137\n",
-      "           3       0.92      0.54      0.68       427\n",
-      "           4       0.58      0.41      0.48       723\n",
-      "           5       0.85      0.47      0.61       665\n",
-      "           6       0.50      0.62      0.55       271\n",
-      "           7       0.22      0.33      0.27        89\n",
-      "           8       0.34      0.06      0.10       681\n",
-      "           9       0.22      0.44      0.29       109\n",
+      "           0       0.24      0.39      0.30       496\n",
+      "           1       0.28      0.20      0.24       626\n",
+      "           2       0.12      0.86      0.21       140\n",
+      "           3       0.85      0.54      0.66       422\n",
+      "           4       0.55      0.41      0.47       705\n",
+      "           5       0.88      0.53      0.66       687\n",
+      "           6       0.47      0.63      0.54       269\n",
+      "           7       0.31      0.38      0.34        84\n",
+      "           8       0.49      0.06      0.11       662\n",
+      "           9       0.24      0.48      0.32        87\n",
       "\n",
-      "    accuracy                           0.37      4178\n",
-      "   macro avg       0.42      0.43      0.37      4178\n",
-      "weighted avg       0.49      0.37      0.38      4178\n",
+      "   micro avg       0.38      0.38      0.38      4178\n",
+      "   macro avg       0.44      0.45      0.38      4178\n",
+      "weighted avg       0.52      0.38      0.40      4178\n",
       "\n"
      ]
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,20 +143,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.25      0.39      0.30       475\n",
-      "           1       0.28      0.20      0.24       601\n",
-      "           2       0.12      0.86      0.20       150\n",
-      "           3       0.93      0.59      0.72       408\n",
-      "           4       0.55      0.33      0.41       741\n",
-      "           5       0.92      0.46      0.61       742\n",
-      "           6       0.49      0.65      0.56       257\n",
-      "           7       0.14      0.38      0.21        78\n",
-      "           8       0.62      0.09      0.16       627\n",
-      "           9       0.24      0.47      0.32        99\n",
+      "           0       0.24      0.37      0.29       472\n",
+      "           1       0.30      0.21      0.24       637\n",
+      "           2       0.12      0.90      0.21       151\n",
+      "           3       0.94      0.59      0.72       440\n",
+      "           4       0.62      0.36      0.46       702\n",
+      "           5       0.91      0.47      0.62       700\n",
+      "           6       0.51      0.61      0.56       250\n",
+      "           7       0.18      0.42      0.25        78\n",
+      "           8       0.66      0.11      0.18       635\n",
+      "           9       0.20      0.42      0.27       113\n",
       "\n",
-      "    accuracy                           0.37      4178\n",
-      "   macro avg       0.46      0.44      0.37      4178\n",
-      "weighted avg       0.56      0.37      0.40      4178\n",
+      "   micro avg       0.38      0.38      0.38      4178\n",
+      "   macro avg       0.47      0.45      0.38      4178\n",
+      "weighted avg       0.57      0.38      0.41      4178\n",
       "\n"
      ]
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,20 +185,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.25      0.38      0.30       478\n",
-      "           1       0.30      0.19      0.23       635\n",
-      "           2       0.12      0.92      0.22       149\n",
-      "           3       0.94      0.61      0.74       445\n",
-      "           4       0.65      0.37      0.47       678\n",
-      "           5       0.81      0.57      0.67       703\n",
-      "           6       0.53      0.68      0.59       246\n",
-      "           7       0.16      0.49      0.24        72\n",
-      "           8       0.67      0.13      0.21       667\n",
-      "           9       0.55      0.55      0.55       105\n",
+      "           0       0.24      0.38      0.30       469\n",
+      "           1       0.32      0.21      0.25       590\n",
+      "           2       0.11      0.89      0.19       131\n",
+      "           3       0.98      0.59      0.73       469\n",
+      "           4       0.67      0.35      0.46       700\n",
+      "           5       0.74      0.49      0.59       709\n",
+      "           6       0.54      0.65      0.59       263\n",
+      "           7       0.14      0.39      0.20        79\n",
+      "           8       0.65      0.12      0.20       664\n",
+      "           9       0.29      0.51      0.37       104\n",
       "\n",
-      "    accuracy                           0.41      4178\n",
-      "   macro avg       0.50      0.49      0.42      4178\n",
-      "weighted avg       0.58      0.41      0.43      4178\n",
+      "   micro avg       0.39      0.39      0.39      4178\n",
+      "   macro avg       0.47      0.46      0.39      4178\n",
+      "weighted avg       0.57      0.39      0.42      4178\n",
       "\n"
      ]
     }
@@ -217,6 +217,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[178,  45, 186,   0,  10,   0,  21,  19,   4,   6],\n",
+       "       [141, 123, 237,   0,  15,   2,  11,  40,   1,  20],\n",
+       "       [  3,   2, 116,   0,   0,   0,   0,  10,   0,   0],\n",
+       "       [ 50,  32,  66, 275,  25,  10,   2,   0,   1,   8],\n",
+       "       [104,  35, 155,   3, 243,   6,  10, 100,  14,  30],\n",
+       "       [114,  56,  78,   3,   0, 346,  35,   1,  20,  56],\n",
+       "       [ 32,  17,  11,   0,   4,  15, 171,   4,   3,   6],\n",
+       "       [  8,  22,   3,   0,   8,   0,   5,  31,   0,   2],\n",
+       "       [ 97,  31, 229,   0,  60,  89,  53,  23,  80,   2],\n",
+       "       [  9,  17,  17,   0,   0,   0,   8,   0,   0,  53]], dtype=int64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -225,14 +261,14 @@
     "### Which streets signs are harder to recognise?\n",
     "Based on the recall measure labels 1 and 8 are the harsdest to recognize.\n",
     "### Which street signs are most easily confused?\n",
-    "TODO: Print confusion matrix\n",
+    "Based on the confusion matrix the most confused sign is the label 2 and, in order, it's mistaken for labels 1, 8, 0 and 4. \n",
     "### Which attributes (fields) are more reliable and which are less reliable in classification of street signs?\n",
     "By looking at top_2_array we can identify the most reliable features (pixels). By doing some operations like the module we can see those pixels are closer to the centre of the image (or at least don't belong to the borders).\n",
     "Regarding the less reliable pixels we consider the ones with the lowest correlation value with respect to the label.\n",
     "### What was the purpose of Tasks 5 and 6?\n",
     "Prepare the data in a way that we keep the most relevant attributes.\n",
     "### What would happen if the data sets you used in Tasks 4, 5 and 6 were not randomised?\n",
-    "TODO: Rethink. Guess: NO VISIBLE CHANGES\n",
+    "It doens't happen anything, the results are the same.\n",
     "### What would happen if there is cross-correlation between the non-class attributes?\n",
     "There is actually cross-correlation between pixels that are close to each other. As a consecuence of that, if two pixels are correlated (adjacent) to each other, and one of them is included in the top 10 of the most correlated pixels with the label, the other is likely to be in the top 10 as well."
    ]
@@ -261,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
