--- a/From_01_to_04.ipynb
+++ b/From_01_to_04.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
     "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
     "labels = pd.read_csv('data/y_train_smpl.csv')\n",
+    "\n",
+    "## ---------------- Data preparation ---------------- ##\n",
+    "X_train = []\n",
+    "for i in range(data.shape[0]):\n",
+    "    img = np.uint8(data.iloc[i])\n",
+    "    edited = cv2.Canny(img, 10, 30)\n",
+    "    edited = cv2.GaussianBlur(edited, (5, 5), 0)\n",
+    "    X_train.append(edited.reshape((1,-1))[0])\n",
+    "    \n",
+    "data = pd.DataFrame(X_train)\n",
+    "## -------------------------------------------------- ##\n",
     "\n",
     "data['label'] = labels\n",
     "\n",
@@ -19,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -43,20 +57,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.25      0.14      0.18       458\n",
-      "           1       0.26      0.23      0.25       641\n",
-      "           2       0.08      0.85      0.15       119\n",
-      "           3       0.77      0.38      0.51       425\n",
-      "           4       0.79      0.21      0.34       696\n",
-      "           5       0.51      0.45      0.48       737\n",
-      "           6       0.36      0.59      0.45       247\n",
-      "           7       0.10      0.59      0.17        75\n",
-      "           8       0.72      0.09      0.16       682\n",
-      "           9       0.19      0.26      0.22        98\n",
+      "           0       0.50      0.36      0.42       477\n",
+      "           1       0.45      0.49      0.47       616\n",
+      "           2       0.26      0.72      0.38       146\n",
+      "           3       0.77      0.85      0.81       419\n",
+      "           4       0.86      0.83      0.85       703\n",
+      "           5       1.00      0.83      0.91       716\n",
+      "           6       0.71      0.86      0.78       243\n",
+      "           7       0.64      0.76      0.69        66\n",
+      "           8       0.96      0.74      0.84       702\n",
+      "           9       0.74      0.86      0.79        90\n",
       "\n",
-      "    accuracy                           0.30      4178\n",
-      "   macro avg       0.40      0.38      0.29      4178\n",
-      "weighted avg       0.51      0.30      0.32      4178\n",
+      "    accuracy                           0.71      4178\n",
+      "   macro avg       0.69      0.73      0.69      4178\n",
+      "weighted avg       0.75      0.71      0.72      4178\n",
       "\n"
      ]
     }
