Finished 10-11 points. Cleaned code.

--- a/From_10_to_11.ipynb
+++ b/From_10_to_11.ipynb
@@ -2,26 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import homogeneity_score\n",
     "\n",
-    "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
+    "def preprocessing(val=True):\n",
+    "    \n",
+    "    data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
+    "    labels = pd.read_csv('data/y_train_smpl.csv')\n",
     "\n",
-    "estimator = KMeans(n_clusters=10, max_iter=50000, init='random', random_state=1, n_jobs=-1).fit(data)\n",
+    "    if(val):\n",
+    "        ## ---------------- Data preparation ---------------- ##\n",
+    "        X_train = []\n",
+    "        for i in range(data.shape[0]):\n",
+    "            img = np.uint8(data.iloc[i])\n",
+    "            edited = cv2.Canny(img, 10, 30)\n",
+    "            edited = cv2.GaussianBlur(edited, (5, 5), 0)\n",
+    "            X_train.append(edited.reshape((1,-1))[0])\n",
     "\n",
-    "labels = pd.read_csv('data/y_train_smpl.csv')\n",
-    "labels = np.reshape(labels.values, newshape=(1, -1))"
+    "        data = pd.DataFrame(X_train)\n",
+    "        ## -------------------------------------------------- ##\n",
+    "\n",
+    "    return data, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import homogeneity_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,71 +54,132 @@
     }
    ],
    "source": [
+    "# NO labels NO preprocessing\n",
+    "data, labels = preprocessing(False)\n",
+    "labels = np.reshape(labels.values, newshape=(1, -1))\n",
+    "\n",
+    "estimator = KMeans(n_clusters=10, max_iter=50000, init='random', random_state=1, n_jobs=-1).fit(data)\n",
     "print(homogeneity_score(labels[0], estimator.labels_))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans\n",
-    "import pandas as pd\n",
-    "\n",
-    "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
-    "labels = pd.read_csv('data/y_train_smpl.csv')\n",
-    "data['label'] = labels\n",
-    "data = data.sample(frac=1)\n",
-    "X_training = data.iloc[:10000]\n",
-    "X_test = data.iloc[10000:]\n",
-    "y_test = X_test['label']\n",
-    "#X_test = X_test.drop(['label'], axis=1)\n",
-    "estimator = KMeans(n_clusters=10, max_iter=50000, random_state=1, n_jobs=-1).fit(X_training)\n",
-    "e = estimator.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1148330725669916\n"
+      "0.09738081664029646\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import homogeneity_score\n",
+    "# YES labels NO preprocessing\n",
+    "data, labels = preprocessing(False)\n",
+    "data['label'] = labels\n",
+    "data = data.sample(frac=1)\n",
+    "\n",
+    "X_training = data.iloc[:10000]\n",
+    "X_test = data.iloc[10000:]\n",
+    "y_test = X_test['label']\n",
+    "\n",
+    "estimator = KMeans(n_clusters=10, max_iter=50000, random_state=1, n_jobs=-1).fit(X_training)\n",
+    "e = estimator.predict(X_test)\n",
     "print(homogeneity_score(y_test.values, e))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4924864156309917\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import pandas as pd\n",
+    "# NO labels YES preprocessing\n",
+    "data, labels = preprocessing()\n",
+    "labels = np.reshape(labels.values, newshape=(1, -1))\n",
     "\n",
-    "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
-    "labels = pd.read_csv('data/y_train_smpl.csv')\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data, labels, test_size=0.33)\n",
-    "nbrs = NearestNeighbors(n_neighbors=2, algorithm='ball_tree').fit(data)\n",
-    "distances, indices = nbrs.kneighbors(data)"
+    "estimator = KMeans(n_clusters=10, max_iter=50000, init='random', random_state=1, n_jobs=-1).fit(data)\n",
+    "print(homogeneity_score(labels[0], estimator.labels_))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5040984761555782\n"
+     ]
+    }
+   ],
+   "source": [
+    "# YES labels YES preprocessing\n",
+    "data, labels = preprocessing()\n",
+    "data['label'] = labels\n",
+    "data = data.sample(frac=1)\n",
+    "\n",
+    "X_training = data.iloc[:10000]\n",
+    "X_test = data.iloc[10000:]\n",
+    "y_test = X_test['label']\n",
+    "\n",
+    "estimator = KMeans(n_clusters=10, max_iter=50000, random_state=1, n_jobs=-1).fit(X_training)\n",
+    "e = estimator.predict(X_test)\n",
+    "print(homogeneity_score(y_test.values, e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5795515321252357\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing with the top 10 correlated features for each label. (NO labels YES preprocessing)\n",
+    "\n",
+    "top_10_array = set()\n",
+    "\n",
+    "data, _ = preprocessing()\n",
+    "\n",
+    "for i in range(10):\n",
+    "    data = data.reindex(np.arange(data.shape[0]))\n",
+    "    labels = pd.read_csv(f'data/y_train_smpl_{i}.csv')\n",
+    "    data['label'] = labels\n",
+    "    data = data.sample(frac=1)\n",
+    "    \n",
+    "    corr_label = data.drop(\"label\", axis=1).apply(lambda x: x.corr(data.label))\n",
+    "    corr_label = [(index, abs(corr_val), i) for index, corr_val in enumerate(corr_label)]\n",
+    "    corr_label = sorted(corr_label, key=lambda tup: tup[1], reverse=True)  # Order by correlation value\n",
+    "            \n",
+    "    for tup in corr_label[:10]:\n",
+    "        top_10_array.add(tup[0])\n",
+    "        \n",
+    "data, labels = preprocessing()\n",
+    "data_top_10 = data[data.columns[list(top_10_array)]].copy(deep=True)\n",
+    "\n",
+    "labels = np.reshape(labels.values, newshape=(1, -1))\n",
+    "estimator = KMeans(n_clusters=10, max_iter=50000, init='random', random_state=1, n_jobs=-1).fit(data_top_10)\n",
+    "print(homogeneity_score(labels[0], estimator.labels_))"
+   ]
   }
  ],
  "metadata": {
