--- a/From_05_to_07.ipynb
+++ b/From_05_to_07.ipynb
@@ -2,14 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def preprocessing(val=True):\n",
+    "    \n",
+    "    data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
+    "    labels = pd.read_csv('data/y_train_smpl.csv')\n",
+    "\n",
+    "    if(val):\n",
+    "        ## ---------------- Data preparation ---------------- ##\n",
+    "        X_train = []\n",
+    "        for i in range(data.shape[0]):\n",
+    "            img = np.uint8(data.iloc[i])\n",
+    "            edited = cv2.Canny(img, 10, 30)\n",
+    "            edited = cv2.GaussianBlur(edited, (5, 5), 0)\n",
+    "            X_train.append(edited.reshape((1,-1))[0])\n",
+    "\n",
+    "        data = pd.DataFrame(X_train)\n",
+    "        ## -------------------------------------------------- ##\n",
+    "\n",
+    "    return data, labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Point 5: Deeper analysis of the data\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "top_2_array = set()\n",
     "top_5_array = set()\n",
@@ -19,7 +46,8 @@
     "bottom_5_array = set()\n",
     "bottom_10_array = set()\n",
     "\n",
-    "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
+    "data, _ = preprocessing()\n",
+    "\n",
     "for i in range(10):\n",
     "    data = data.reindex(np.arange(data.shape[0]))\n",
     "    labels = pd.read_csv(f'data/y_train_smpl_{i}.csv')\n",
@@ -49,46 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a = sorted([(int(round(x/48)), x % 48) for x in bottom_2_array])\n",
-    "# a = a.filter(lambda (x, y): x >10 or x < 37)\n",
-    "# print(a)\n",
-    "# b = sorted([x % 48 for x in bottom_5_array])\n",
-    "# print(b)\n",
-    "# c = sorted([(int(round(x[0]/48)), x[0] % 48, x[1]) for x in top_10_array])\n",
-    "# print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Point 6: Try to improve the classification\n",
     "\n",
-    "data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
-    "labels = pd.read_csv('data/y_train_smpl.csv')\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "\n",
-    "data_top_2 = data[data.columns[list(top_2_array)]].copy(deep=True)\n",
-    "data_top_2['label'] = labels\n",
-    "# data_top_2 = data_top_2.sample(frac=1)\n",
-    "\n",
-    "data_top_5 = data[data.columns[list(top_5_array)]].copy(deep=True)\n",
-    "data_top_5['label'] = labels\n",
-    "# data_top_5 = data_top_5.sample(frac=1)\n",
-    "\n",
-    "data_top_10 = data[data.columns[list(top_10_array)]].copy(deep=True)\n",
-    "data_top_10['label'] = labels\n",
-    "# data_top_10 = data_top_10.sample(frac=1)"
+    "data, labels = preprocessing()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -97,28 +101,27 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.20      0.33      0.25       456\n",
-      "           1       0.30      0.20      0.24       617\n",
-      "           2       0.09      0.78      0.17       131\n",
-      "           3       0.88      0.55      0.68       425\n",
-      "           4       0.55      0.40      0.46       703\n",
-      "           5       0.90      0.51      0.65       706\n",
-      "           6       0.49      0.64      0.56       276\n",
-      "           7       0.27      0.38      0.32        86\n",
-      "           8       0.37      0.06      0.10       676\n",
-      "           9       0.33      0.43      0.38       102\n",
+      "           0       0.63      0.42      0.51       478\n",
+      "           1       0.54      0.34      0.42       591\n",
+      "           2       0.34      0.62      0.44       132\n",
+      "           3       0.66      0.88      0.75       417\n",
+      "           4       0.87      0.74      0.80       717\n",
+      "           5       0.83      0.75      0.79       708\n",
+      "           6       0.50      0.83      0.62       245\n",
+      "           7       0.23      0.90      0.37        86\n",
+      "           8       0.87      0.77      0.82       704\n",
+      "           9       0.57      0.42      0.48       100\n",
       "\n",
-      "    accuracy                           0.37      4178\n",
-      "   macro avg       0.44      0.43      0.38      4178\n",
-      "weighted avg       0.51      0.37      0.39      4178\n",
+      "    accuracy                           0.67      4178\n",
+      "   macro avg       0.60      0.67      0.60      4178\n",
+      "weighted avg       0.71      0.67      0.67      4178\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "data_top_2 = data[data.columns[list(top_2_array)]].copy(deep=True)\n",
+    "data_top_2['label'] = labels\n",
     "\n",
     "X = data_top_2.iloc[:, :-1]  # All columns but the label\n",
     "y = data_top_2['label']\n",
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -143,25 +146,28 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.26      0.37      0.31       488\n",
-      "           1       0.29      0.21      0.24       629\n",
-      "           2       0.11      0.93      0.19       131\n",
-      "           3       0.90      0.60      0.72       430\n",
-      "           4       0.58      0.33      0.42       694\n",
-      "           5       0.95      0.46      0.62       740\n",
-      "           6       0.53      0.68      0.59       244\n",
-      "           7       0.16      0.40      0.23        83\n",
-      "           8       0.62      0.09      0.16       634\n",
-      "           9       0.21      0.51      0.30       105\n",
+      "           0       0.56      0.60      0.58       448\n",
+      "           1       0.61      0.36      0.45       624\n",
+      "           2       0.36      0.69      0.48       131\n",
+      "           3       0.69      0.92      0.79       424\n",
+      "           4       0.88      0.76      0.82       697\n",
+      "           5       0.89      0.81      0.85       701\n",
+      "           6       0.70      0.84      0.76       254\n",
+      "           7       0.30      0.86      0.45        72\n",
+      "           8       0.91      0.84      0.87       717\n",
+      "           9       0.69      0.71      0.70       110\n",
       "\n",
-      "    accuracy                           0.38      4178\n",
-      "   macro avg       0.46      0.46      0.38      4178\n",
-      "weighted avg       0.57      0.38      0.40      4178\n",
+      "    accuracy                           0.72      4178\n",
+      "   macro avg       0.66      0.74      0.67      4178\n",
+      "weighted avg       0.75      0.72      0.73      4178\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "data_top_5 = data[data.columns[list(top_5_array)]].copy(deep=True)\n",
+    "data_top_5['label'] = labels\n",
+    "\n",
     "X = data_top_5.iloc[:, :-1]\n",
     "y = data_top_5['label']\n",
     "\n",
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -185,25 +191,28 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.24      0.38      0.29       465\n",
-      "           1       0.30      0.18      0.23       597\n",
-      "           2       0.12      0.89      0.21       151\n",
-      "           3       0.96      0.60      0.74       437\n",
-      "           4       0.61      0.36      0.45       700\n",
-      "           5       0.88      0.50      0.64       692\n",
-      "           6       0.53      0.69      0.60       255\n",
-      "           7       0.15      0.41      0.21        86\n",
-      "           8       0.68      0.11      0.19       683\n",
-      "           9       0.27      0.49      0.35       112\n",
+      "           0       0.61      0.62      0.61       493\n",
+      "           1       0.59      0.40      0.48       588\n",
+      "           2       0.47      0.70      0.56       143\n",
+      "           3       0.76      0.95      0.84       421\n",
+      "           4       0.90      0.86      0.88       681\n",
+      "           5       0.95      0.86      0.90       721\n",
+      "           6       0.77      0.87      0.82       266\n",
+      "           7       0.52      0.90      0.66        77\n",
+      "           8       0.91      0.88      0.89       679\n",
+      "           9       0.67      0.85      0.75       109\n",
       "\n",
-      "    accuracy                           0.39      4178\n",
-      "   macro avg       0.47      0.46      0.39      4178\n",
-      "weighted avg       0.58      0.39      0.41      4178\n",
+      "    accuracy                           0.77      4178\n",
+      "   macro avg       0.71      0.79      0.74      4178\n",
+      "weighted avg       0.78      0.77      0.77      4178\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "data_top_10 = data[data.columns[list(top_10_array)]].copy(deep=True)\n",
+    "data_top_10['label'] = labels\n",
+    "\n",
     "X = data_top_10.iloc[:, :-1]\n",
     "y = data_top_10['label']\n",
     "\n",
@@ -218,25 +227,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[175,  42, 186,   1,  15,   1,  19,  20,   3,   3],\n",
-       "       [152, 110, 243,   0,  17,   1,  13,  33,   0,  28],\n",
-       "       [  2,   1, 135,   0,   0,   0,   0,  13,   0,   0],\n",
-       "       [ 39,  39,  58, 264,  23,   2,   3,   0,   2,   7],\n",
-       "       [104,  36, 159,   3, 250,   1,  17,  97,  14,  19],\n",
-       "       [109,  43,  66,   4,   2, 345,  36,   0,  12,  75],\n",
-       "       [ 27,  13,  11,   0,   5,  14, 175,   3,   4,   3],\n",
-       "       [  8,  15,  11,   0,  13,   0,   4,  35,   0,   0],\n",
-       "       [103,  45, 243,   3,  84,  25,  51,  39,  75,  15],\n",
-       "       [  9,  23,  14,   0,   0,   1,  10,   0,   0,  55]])"
+       "array([[306,  96,  23,  19,   5,   1,  18,  13,   5,   7],\n",
+       "       [171, 238,  69,  20,  15,   5,  49,   7,   8,   6],\n",
+       "       [  9,  14, 100,   1,   1,   0,   1,   5,   9,   3],\n",
+       "       [  0,  11,   5, 399,   2,   0,   0,   0,   2,   2],\n",
+       "       [  0,   4,   7,  42, 588,  24,   0,   6,  10,   0],\n",
+       "       [  1,   9,   2,  15,  35, 617,   0,  10,  20,  12],\n",
+       "       [  8,  20,   1,   5,   0,   0, 232,   0,   0,   0],\n",
+       "       [  0,   0,   1,   0,   2,   0,   0,  69,   1,   4],\n",
+       "       [  6,  11,   4,  27,   5,   2,   0,  18, 595,  11],\n",
+       "       [  3,   0,   2,   0,   2,   0,   0,   4,   5,  93]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,42 +274,6 @@
     "### What would happen if there is cross-correlation between the non-class attributes?\n",
     "There is actually cross-correlation between pixels that are close to each other. As a consecuence of that, if two pixels are correlated (adjacent) to each other, and one of them is included in the top 10 of the most correlated pixels with the label, the other is likely to be in the top 10 as well."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import homogeneity_score\n",
-    "\n",
-    "estimator = KMeans(n_clusters=10, random_state=1, n_jobs=-1).fit(data_top_10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.20017461793830968\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(homogeneity_score(y, estimator.labels_))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
