--- a/From_12_to_13.ipynb
+++ b/From_12_to_13.ipynb
@@ -2,102 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def preprocessing(val=True):\n",
+    "    \n",
+    "    data = pd.read_csv('data/x_train_gr_smpl.csv')\n",
+    "    labels = pd.read_csv('data/y_train_smpl.csv')\n",
+    "\n",
+    "    if(val):\n",
+    "        ## ---------------- Data preparation ---------------- ##\n",
+    "        X_train = []\n",
+    "        for i in range(data.shape[0]):\n",
+    "            img = np.uint8(data.iloc[i])\n",
+    "            edited = cv2.Canny(img, 10, 30)\n",
+    "            edited = cv2.GaussianBlur(edited, (5, 5), 0)\n",
+    "            X_train.append(edited.reshape((1,-1))[0])\n",
+    "\n",
+    "        data = pd.DataFrame(X_train)\n",
+    "        ## -------------------------------------------------- ##\n",
+    "\n",
+    "    return data, labels"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.cluster import KMeans, MiniBatchKMeans\n",
-    "from sklearn.metrics import confusion_matrix, classification_report, homogeneity_score"
+    "from sklearn.metrics import homogeneity_score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('data/x_train_gr_smpl.csv')\n",
-    "labels = pd.read_csv('data/y_train_smpl.csv')\n",
-    "labels = np.reshape(labels.values, newshape=(1, -1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4941480704250148\n"
+      "Number of clusters: 10 Homogeneity score: 0.4950284618523185\n",
+      "Number of clusters: 11 Homogeneity score: 0.48341617311681173\n",
+      "Number of clusters: 12 Homogeneity score: 0.5167613058592444\n",
+      "Number of clusters: 13 Homogeneity score: 0.5204136214297174\n",
+      "Number of clusters: 14 Homogeneity score: 0.5530250196404715\n",
+      "Number of clusters: 15 Homogeneity score: 0.5568376753630506\n",
+      "Number of clusters: 16 Homogeneity score: 0.5833472105057467\n",
+      "Number of clusters: 17 Homogeneity score: 0.5763995636211059\n",
+      "Number of clusters: 18 Homogeneity score: 0.5815075350489741\n",
+      "Number of clusters: 19 Homogeneity score: 0.6004386672475748\n",
+      "Number of clusters: 20 Homogeneity score: 0.6146503165589815\n",
+      "Number of clusters: 50 Homogeneity score: 0.6949833069037257\n",
+      "Number of clusters: 100 Homogeneity score: 0.7471942791979834\n"
      ]
     }
    ],
    "source": [
-    "X_train = []\n",
-    "for i in range(df.shape[0]):\n",
-    "    img = np.uint8(df.iloc[i])\n",
-    "    edited = cv2.Canny(img, 10, 30)\n",
-    "    edited = cv2.GaussianBlur(edited, (5, 5), 0)\n",
-    "    X_train.append(edited.reshape((1,-1))[0])\n",
-    "    \n",
-    "#data = pd.DataFrame(X_train)\n",
-    "estimator = KMeans(n_clusters=10, max_iter=50000, random_state=1).fit(X_train)\n",
-    "print(homogeneity_score(labels[0], estimator.labels_))"
+    "n_clusters = [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 50, 100]\n",
+    "\n",
+    "data, labels = preprocessing()\n",
+    "labels = np.reshape(labels.values, newshape=(1, -1))\n",
+    "\n",
+    "for n in n_clusters:\n",
+    "    estimator = KMeans(n_clusters=n, max_iter=50000, random_state=1, n_jobs=-1).fit(data)\n",
+    "    print(f'Number of clusters: {n} Homogeneity score: {homogeneity_score(labels[0], estimator.labels_)}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'reshape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-1e3bf636938a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m48\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m48\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0medited\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0medited\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m48\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m48\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m121\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'reshape'"
-     ]
-    }
-   ],
-   "source": [
-    "i = 200\n",
-    "img = np.uint8(df.iloc[i])\n",
-    "\n",
-    "edited = cv2.findContours(img, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "#edited = cv2.GaussianBlur(img, (5, 5), 0)\n",
-    "#edited = cv2.adaptiveThreshold(edited,255,cv2.ADAPTIVE_THRESH_GAUSSIAN_C,cv2.THRESH_BINARY_INV,11,2)\n",
-    "#edited = cv2.Canny(edited, 10, 100)\n",
-    "\n",
-    "img = img.reshape((48, 48))\n",
-    "edited = edited.reshape((48, 48))\n",
-    "\n",
-    "plt.subplot(121)\n",
-    "plt.imshow(img, cmap='gray')\n",
-    "plt.xticks([]), plt.yticks([])\n",
-    "\n",
-    "plt.subplot(122)\n",
-    "plt.imshow(edited, 'gray')\n",
-    "plt.xticks([]), plt.yticks([])\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
